--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.javatpoint</groupId>
-	<artifactId>spring-boot-example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.rjnitt</groupId>
+	<artifactId>spring-boot-rjnitt</artifactId>
+	<version>1.1</version>
 	<packaging>jar</packaging>
-	<name>spring-boot-example</name>
+	<name>spring-boot-boilerplate</name>
 	<description>A project for Spring Boot</description>
 
 
@@ -34,8 +34,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa </artifactId>
 		</dependency>
-
-	
 
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
